--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,22 @@
 .label {
+  display: inline-flex;
+  gap: 16px;
+  align-items: center;
+  cursor: pointer;
+}
+.label .label-name {
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .input {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  display: block;
+  display: inline-block;
   box-sizing: border-box;
   width: 38px;
   height: 24px;
@@ -21,6 +30,7 @@
   position: relative;
   background: lightgray;
   transition-duration: 0.2s;
+  cursor: pointer;
 }
 .checkbox-input::after {
   content: "";
@@ -53,18 +63,28 @@
   outline: none;
 }
 
-.spin-wrap {
-  width: 100px;
-  height: 100px;
+@keyframes rotation {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-.spin-wrap .spin {
-  width: 100%;
-  height: 100%;
+.spin {
+  --percent: 0%;
+  --spin-size: 100px;
+  --hidden: hidden;
+  width: var(--spin-size);
+  height: var(--spin-size);
   position: relative;
   border-radius: 50%;
-  background: conic-gradient(blue 0%, lightgray 0%);
+  background: conic-gradient(blue var(--percent), lightgray var(--percent));
 }
-.spin-wrap .spin::after {
+.spin.active {
+  animation: rotation 10s linear infinite;
+}
+.spin::after {
   content: "";
   display: block;
   position: absolute;
