--- a/src/style/_inputs.scss
+++ b/src/style/_inputs.scss
@@ -1,43 +1,52 @@
+$input-width: 38px;
+$input-height: 24px;
+
+$checkbox-duration: 0.2s;
+$checkbox-offset: 2px;
+$checkbox-size: $input-height - $checkbox-offset * 2;
+
+
 .input {
   appearance: none;
-  display: block;
+  display: inline-block;
   box-sizing: border-box;
 
-  width: 38px;
-  height: 24px;
+  width: $input-width;
+  height: $input-height;
   margin: 0;
   padding: 0;
 
-  border-radius: 12px;
+  border-radius: $input-height/2;
   border: none;
 }
 
 .checkbox-input {
   position: relative;
-  background: lightgray;
-  transition-duration: 0.2s;
+  background: $gray_light;
+  transition-duration: $checkbox-duration;
+  cursor: pointer;
 
   &::after {
     @include after-init;
-    width: 20px;
-    height: 20px;
-    top: 2px;
-    left: 2px;
-    transition-duration: 0.2s;
+    width: $checkbox-size;
+    height: $checkbox-size;
+    top: $checkbox-offset;
+    left: $checkbox-offset;
+    transition-duration: $checkbox-duration;
   }
 
   &:checked {
-    background: blue;
+    background: $blue_main;
 
     &::after {
-      left: calc(100% - 22px);
+      left: calc(100% - ($checkbox-size + $checkbox-offset));
     }
   }
 }
 
 .number-input {
   text-align: center;
-  border: 1px solid black;
+  border: 1px solid $black_main;
 
 
   &::-webkit-inner-spin-button {
