--- a/src/style/_label.scss
+++ b/src/style/_label.scss
@@ -1,4 +1,12 @@
 .label {
-  font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
+  display: inline-flex;
+  gap: 16px;
+  align-items: center;
+  cursor: pointer;
+
+  .label-name {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    user-select: none;
+  }
 }
