--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,44 @@
           user-select: none;
 }
 
+@keyframes rotation {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.progress-wrap {
+  width: 100px;
+  height: 100px;
+}
+.progress-wrap .progress {
+  --percent: 0%;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border-radius: 50%;
+  background: conic-gradient(blue var(--percent), lightgray var(--percent));
+}
+.progress-wrap .progress.animated {
+  animation: rotation 10s linear infinite;
+}
+.progress-wrap .progress.hidden {
+  display: none;
+}
+.progress-wrap .progress::after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 50%;
+  background-color: white;
+  top: 8px;
+  bottom: 8px;
+  left: 8px;
+  right: 8px;
+}
+
 .input {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -61,37 +99,4 @@
 }
 .number-input:focus {
   outline: none;
-}
-
-@keyframes rotation {
-  0% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-.spin {
-  --percent: 0%;
-  --spin-size: 100px;
-  --hidden: hidden;
-  width: var(--spin-size);
-  height: var(--spin-size);
-  position: relative;
-  border-radius: 50%;
-  background: conic-gradient(blue var(--percent), lightgray var(--percent));
-}
-.spin.active {
-  animation: rotation 10s linear infinite;
-}
-.spin::after {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 50%;
-  background-color: white;
-  top: 8px;
-  bottom: 8px;
-  left: 8px;
-  right: 8px;
 }
