--- a/src/components/label/_label.scss
+++ b/src/components/label/_label.scss
@@ -1,12 +1,11 @@
 .label {
   display: inline-flex;
-  gap: 16px;
+  gap: $font-size;
   align-items: center;
   cursor: pointer;
 
   .label-name {
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: $font-size;
     user-select: none;
   }
 }
