--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,38 @@
+body {
+  margin: 0;
+}
+
+.app-box {
+  max-width: 568px;
+  min-width: 320px;
+  height: 320px;
+  padding: 16px;
+  position: relative;
+  box-sizing: border-box;
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  justify-content: space-evenly;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.app-box .app-name {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+}
+.app-box .input-container {
+  display: flex;
+  gap: 14px;
+  flex-direction: column;
+}
+
+@media screen and (width < 568px) {
+  .app-box {
+    height: 568px;
+    max-width: 320px;
+    flex-direction: column;
+  }
+}
 .label {
   display: inline-flex;
   gap: 16px;
@@ -6,7 +41,6 @@
 }
 .label .label-name {
   font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
