--- a/src/components/progress/_progress.scss
+++ b/src/components/progress/_progress.scss
@@ -17,8 +17,8 @@ $progress-width: 8px;
   .progress {
     --percent: 0%;
 
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     position: relative;
     border-radius: 50%;
     background: conic-gradient($blue_main var(--percent), $gray_light var(--percent));
