--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,8 +60,8 @@ body {
 }
 .progress-wrap .progress {
   --percent: 0%;
-  width: 100%;
-  height: 100%;
+  width: 100px;
+  height: 100px;
   position: relative;
   border-radius: 50%;
   background: conic-gradient(blue var(--percent), lightgray var(--percent));
